edited readme file
